<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">item name</string>
    <string name="item_quantity">enter item quantity</string>
    <string name="item_price">enter item price</string>
    <string name="insert_item_failed">Make sure you entered correct data</string>
    <string name="insert_item_successful">insert successful</string>
    <string name="action_delete">delete</string>
    <string name="add_new_item">Add new item</string>
    <string name="product_details">Product details</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="insert_item_insertdata">make sure you filled correctly every field</string>
    <string name="defaulttext">defaulttext</string>
    <string name="sell">sell</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>
    <string name="empty_view_text">No data to display, to add products, click on round button in bottom-right corner.</string>
    <string name="product_price">Price</string>
    <string name="delete_dialog_msg">Are You sure about delete this item?</string>
    <string name="cancel">cancel</string>
    <string name="outofstock">Out of stock!</string>
    <string name="add_image">Add image</string>
    <string name="action_select_picture">Select picture</string>
    <string name="insert_image_failed">Please, add item image.</string>
    <string name="goback">BACK</string>
    <string name="enter_new_product">Enter new product</string>
</resources>
