<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_listitem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/colorCreamOpacity"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_name"
        android:textSize="22sp"
        android:text="@string/defaulttext"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorCream"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:background="@color/colorCream"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Quantity"
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_quantity"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Price"
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_price"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>

    <Button
        android:id="@+id/item_sell"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textColor="@color/colorPrimaryDark"
        />


</LinearLayout>