<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alchemy">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_back">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_chevron_left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goback"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_details"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryOpacity"
        />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:src="@drawable/barcodeproduct"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCreamOpacity"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/product_name"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/item_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCreamOpacity"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/product_price"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/item_edit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCreamOpacity"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/product_quantity"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/item_edit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/add_quantity"
            android:layout_gravity="right"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/dec_quantity"
            android:layout_gravity="right"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:gravity="center"
            android:id="@+id/order_item"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:gravity="center"
            android:id="@+id/delete_item"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>



</LinearLayout>